Reporting API: Fix some Blink plumbing.

TBR=paulmeyer@chromium.org

Bug: 784518
Change-Id: I5127e19ebd1d3490713e586437d32d46e402c404
Reviewed-on: https://chromium-review.googlesource.com/806477
Commit-Queue: Julia Tuttle <juliatuttle@chromium.org>
Reviewed-by: Ken Rockot <rockot@chromium.org>
Cr-Commit-Position: refs/heads/master@{#522821}